[gd_scene load_steps=2 format=2]

[ext_resource path="res://0 - General/Scripts/fps.gd" type="Script" id=1]

[node name="ColorRect" type="ColorRect"]
pause_mode = 2
margin_right = 81.0
margin_bottom = 64.0
rect_scale = Vector2( 2, 2 )
color = Color( 0.458824, 0.470588, 0.521569, 1 )
script = ExtResource( 1 )

[node name="fps" type="Label" parent="."]
margin_right = 80.0
margin_bottom = 25.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_constants/shadow_offset_x = 0
text = "1234567890"
align = 1
valign = 1

[node name="ColorRect" type="ColorRect" parent="."]
margin_top = 25.0
margin_right = 40.0
margin_bottom = 45.0
color = Color( 1, 0, 0, 1 )

[node name="fps_min" type="Label" parent="ColorRect"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -7.0
margin_bottom = 7.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "100"
align = 1

[node name="ColorRect2" type="ColorRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_top = 25.0
margin_bottom = 45.0
color = Color( 0, 1, 0.203922, 1 )

[node name="fps_max" type="Label" parent="ColorRect2"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -7.0
margin_bottom = 7.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "100"
align = 1

[node name="ColorRect3" type="ColorRect" parent="."]
anchor_right = 1.0
margin_top = 45.0
margin_bottom = 65.0

[node name="memory" type="Label" parent="ColorRect3"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -7.0
margin_bottom = 7.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "100"
align = 1
